# intelliflow

./: README.md  docker-compose.yaml
nginx/: nginx.conf
server/: .dockerignore  Dockerfile  README.md  pyproject.toml  ruff.toml  run.py
server/alembic/: env.py
server/alembic/versions/: 07144aee96ab_modified_user_session_model_with_.py  1afbd466acff_modified_null_constraints_of_session.py  4946ad7067cb_added_user_and_session_models.py  69f53731eb20_added_file_and_workflow_models.py  bfa3a4d93afd_modified_file_embeddings_model_and_.py
server/app/: main.py
server/app/ai/: ai_client.py  embedding_manager.py  prompt_manager.py
server/app/api/v1/: __init__.py  deps.py
server/app/api/v1/endpoints/: __init__.py  user.py  workflow.py
server/app/aws/: s3_manager.py
server/app/core/: __init__.py  security_settings.py  settings.py
server/app/db/: session.py
server/app/db/models/: file.py  user.py  workflow.py
server/app/repository/: file.py  workflow.py
server/app/schema/: app_dto.py  embedding_dto.py  user_dto.py
server/app/service/: chat.py  file.py  user.py
server/app/utils/: logger.py  security.py
server/src/app/ai/: chroma_db.py
server/src/app/api/: __init__.py
server/src/app/api/v1/: __init__.py  deps.py
server/src/app/api/v1/endpoints/: __init__.py  file.py  user.py
server/src/app/aws/: __init__.py  s3_manager.py
server/src/app/core/: security_settings.py  settings.py
server/src/app/db/: database.py
server/src/app/db/models/: __init__.py  file.py  user.py  workflow.py
server/src/app/middleware/: auth.py
server/src/app/repository/: file.py  user.py
server/src/app/schema/: app_dto.py  embedding_dto.py  enums.py  file_dto.py  workflow_dto.py
server/src/app/service/: file.py  workflow.py
server/src/app/utils/: security.py
web/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(root)/: layout.tsx
web/app/(root)/workflow/: page.tsx
web/app/(root)/workflow/[workflow_id]/: page.tsx
web/components/chat/: ChatBox.tsx  ChatCanvas.tsx  MarkdownViewer.tsx
web/components/flow-builder/: FlowCanvas.tsx  NodeOptions.tsx
web/components/flow-builder/nodes/: KnowledgeBase.tsx  LLM.tsx  Output.tsx  UserQuery.tsx  base.tsx  types.ts
web/components/layout/: Header.tsx  Sidebar.tsx
web/components/modals/: CreateWorkflow.tsx
web/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  select.tsx  sheet.tsx  spinner.tsx  switch.tsx  textarea.tsx
web/context/: AppContext.tsx  DnDContext.tsx
web/forms/: KnowledgeBaseFom.tsx  schema.ts
web/lib/: axios.ts  constants.ts  settings.ts
web/services/: file-service.ts  user-service.ts  workflow-service.ts
